# PatternMatching_EDAA

./: .gitignore  CMakeLists.txt  README.md  build.sh  nohup.out  query.sh  run.sh
include/csa/: csa.hpp
include/fm_index/: fm_index.hpp
include/suffix_array/: suffix_array.hpp
input/: example.txt
plots/: plot_countfn.p
res/: dna.csv  genome.csv  proteins.csv  sources.csv
res_of/: create.csv  dna.csv  genome.csv  proteins.csv  sources.csv
src/: create.cpp  main.cpp  uhr_count_fn.cpp
